RE-505 Javadocs